# healcode

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ai/: __init__.py  ai_service.py  example.py
ai/configs/: development.yaml  environment.template  production.yaml
ai/core/: ai_service.py  cache_manager.py  context_store.py  context_summarizer.py  error_context_collector.py  function_analyzer.py  orchestrator.py  repo_processor.py  zoekt_search_manager.py
ai/core/adapters/: base.py  google_gemini.py  xai.py
ai/examples/: enhanced_context_example.py
ai/prompts/: code_analysis.py
ai/services/: ai_service.py  enhanced_ai_service.py
ai/workflows/: __init__.py  config.py  enhanced_parsers.py  enhanced_zoekt_manager.py  error_analysis_graph.py  example_usage.py  few_shot_examples.py  state.py
architecture/: ai.mermaid  automatic-code-improvement-system-architecture.mermaid  component-architecture.mermaid  detailed-component-diagram.mermaid  git-plugin-system-architecture.md  request-processing-workflow.mermaid  sequence-diagram---request-processing.mermaid  system-structure.md  zoekt-integration.mermaid
codebase-indexer/: README.md  example_usage.py  indexer_config.yaml  pyproject.toml
codebase-indexer/indexer/: __init__.py  cli.py
codebase-indexer/indexer/core/: __init__.py  config.py  event_bus.py  framework.py  interfaces.py  plugin_registry.py
codebase-indexer/indexer/plugins/: trigram.py
codebase-indexer/plugins/: trigram.py
docker/: python.Dockerfile
editor/: README.md  __init__.py  demo.py  example_usage.py  interfaces.py  service.py
editor/examples/: multi_language_example.py
editor/strategies/: README.md  __init__.py  ast_editor.py  base_ast_editor.py  editor_factory.py  javascript_editor.py  line_editor.py  pattern_editor.py  rust_editor.py
gitplugin/: __init__.py
gitplugin/api/: __init__.py  main.py  middleware.py
gitplugin/api/routes/: __init__.py  auth.py  credentials.py  health.py  jobs.py  repositories.py  webhooks.py
gitplugin/core/: __init__.py  credentials.py  git_operations.py  security.py  workspace.py
indexer/: Dockerfile  __init__.py  docker-compose.yml  example_zoekt.py  zoekt_client.py
indexer/codebase/: main.js
scripts/: install_zoekt.sh  run_pipeline.sh
serve/: __init__.py  app.py  main.py  models.py  queue_manager.py  task_processor.py
