[tool.poetry]
name = "ai-refactoring"
version = "0.1.0"
description = "AI-powered code refactoring system running entirely locally"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.30"
requests = "^2.28.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
typer = "^0.7.0"
rich = "^13.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pull-daemon = "ai_refactoring.pull_daemon:main"
indexer = "ai_refactoring.indexer:main"
search-proxy = "ai_refactoring.search_proxy:main"
ai-engine = "ai_refactoring.ai_engine:main"
pr-creator = "ai_refactoring.pr_creator:main" 