[tool.poetry]
name = "git-plugin"
version = "1.0.0"
description = "Simplified Git Plugin for basic Git operations"
authors = ["Git Plugin Team <team@gitplugin.com>"]
readme = "README.md"
packages = [{include = "gitplugin"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
GitPython = "^3.1.40"
httpx = "^0.25.2"
pydantic = "^2.5.0"
python-json-logger = "^2.0.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-plugin = "gitplugin.api.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 