[tool.poetry]
name = "healcode"
version = "1.0.0"
description = "HealCode - Automated Code Improvement System with Git Plugin and Editor Module"
authors = ["HealCode Team <team@healcode.com>"]
readme = "README.md"
packages = [
    {include = "gitplugin"},
    {include = "editor"},
    {include = "codebase-indexer", from = "."}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
GitPython = "^3.1.40"
httpx = "^0.25.2"
pydantic = "^2.5.0"
python-json-logger = "^2.0.7"
requests = "^2.31.0"
in-place = "^1.0.1"
portalocker = "^3.2.0"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-plugin = "gitplugin.api.main:main"
healcode-editor = "editor.example_usage:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 